--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "blueutilities",
   "version": "1.1.1",
   "description": "Adds safeEval and replaceAll",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && mocha",
+    "prepare": "npm test"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/BlueBurgersTDD/blueutilities/issues"
   },
-  "homepage": "https://github.com/BlueBurgersTDD/blueutilities#readme"
+  "homepage": "https://github.com/BlueBurgersTDD/blueutilities#readme",
+  "devDependencies": {
+    "@types/node": "^15.6.1",
+    "mocha": "^8.4.0"
+  },
+  "types": "types/index.d.ts"
 }
