--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Adds safeEval and replaceAll",
   "main": "dist/index.js",
   "scripts": {
-    "test": "tsc && mocha",
-    "prepare": "npm test"
+    "test": "npm build && mocha",
+    "prepare": "npm test",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,8 @@
   "homepage": "https://github.com/BlueBurgersTDD/blueutilities#readme",
   "devDependencies": {
     "@types/node": "^15.6.1",
-    "mocha": "^8.4.0"
+    "mocha": "^8.4.0",
+    "typescript": "^4.3.2"
   },
   "types": "types/index.d.ts"
 }
