--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Adds safeEval and replaceAll",
   "main": "dist/index.js",
   "scripts": {
-    "test": "npm run build && mocha",
-    "prepare": "npm test",
+    "test": "jest",
+    "prepack": "npm run build && npm test",
     "build": "tsc"
   },
   "repository": {
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/BlueBurgersTDD/blueutilities#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.18",
     "@types/node": "^15.6.1",
-    "mocha": "^8.4.0",
+    "chai": "^4.3.4",
+    "jest": "^27.0.3",
     "typescript": "^4.3.2"
   },
   "types": "types/index.d.ts"
