--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       uses: actions/setup-node@v1.4.4
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm run build
     - run: npm install
     - env:
         CIRCLE_NODE_TOTAL: 9
