--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Adds safeEval and replaceAll",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha",
     "prepack": "npm run build && npm test",
-    "build": "tsc"
+    "build": "tsc",
+    "watch": "nodemon --exec \"pnpm prepack\" -i dist"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
     "@types/chai": "^4.2.18",
     "@types/node": "^15.6.1",
     "chai": "^4.3.4",
-    "jest": "^27.0.3",
+    "mocha": "^9.0.1",
+    "nodemon": "^2.0.7",
     "typescript": "^4.3.2"
   },
   "types": "types/index.d.ts"
