--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adds a few utility functions",
   "main": "dist/index.js",
   "scripts": {
-    "test": "tap",
+    "test": "ava",
     "prepack": "npm run build && npm test",
     "build": "tsc"
   },
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/BlueBurgersTDD/blueutilities#readme",
   "devDependencies": {
     "@types/node": "^17.0.18",
-    "tap": "^15.1.6",
+    "ava": "^4.0.1",
     "typescript": "^4.3.2"
   },
   "types": "types/index.d.ts",
   "packageManager": "pnpm@6.27.1",
-  "tap": {
-    "check-coverage": false
+  "ava": {
+    "files": [
+      "dist/test/**/*.test.js"
+    ]
   }
 }
